# py-scan

./: .gitignore  cli.py  commands.py  main.py  pyproject.toml  requirements.txt
pyscan/: main.py
