[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyscan"
version = "0.1.0"
description = "A CLI application that performs network scans."
readme = "README.md"
authors = [{ name = "Will", email = "willj4945@gmail.com" }]
dependencies = ["click >= 8.1.8", "pyfiglet >=1.0.2"]

[project.scripts]
pyscan = "pyscan.main:cli"
